--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="leftside">
+        <img src="bgimage.jpg" alt="">
+        <div class="logo">
+            <img src="odinlogo.png" alt="">
+            <p class="odin">ODIN</p>
+        </div>
+    </div>
+    <div class="rightside">
+        <p class="longtext">This is not a real online service!
+            You know you need something like this in your life to
+            help you realize your deepest dreams.Sign up
+        <span class="italic">now </span>to get started.</p>
+        <br>
+        <p class="shorttext">You
+        <span class="italic">know </span>you want to.</p>
+        <form action="">
+            <fieldset class="details">
+                <legend>Let's do this!</legend>
+                <div class="flexbox">
+                    <label for="firstname" class="firstname">FIRST NAME</label>
+                    <input type="text" id="firstname" placeholder="Enter your first name">
+                    <label for="lastname" class="lastname">LAST NAME</label>
+                    <input type="text" id="lastname" placeholder="Enter your last name">
+                    <label for="emailid" class="emailid">EMAIL</label>
+                    <input type="email" id="emailid" placeholder="Enter your email here">
+                    <label for="phonenumber" class="phonenumber">PHONE NUMBER</label>
+                    <input type="number" id="phonenumber" placeholder="Enter your phone number here" minlength="10"
+                        maxlength="10">
+                    <label for="password" class="password">PASSWORD</label>
+                    <input type="password" id="password" placeholder="Enter your password">
+                    <label for="confirmpassword" class="confirmpassword">CONFIRM PASSWORD</label>
+                    <input type="password" id="confirmpassword" placeholder="Confirm your password" maxlength="10">
+                </div>
+                <button type="submit">Create Account</button>
+            </fieldset>
+
+        </form>
+        <div class="login">
+            Already have an account? <a href="" class="loglink">Log in</a>
+        </div>
+    </div>
+
+
+
     <script src="server.js"></script>
 </body>
+
 </html>
